--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <hr>
     <h3>I am a webdeveloper</h3>
     <img src="https://picsum.photos/seed/picsum/200/300" alt="This is an image">
+    <br>
+    <a href="#">Home</a>
+    <a href="#">Contact</a>
+    <a href="">Project 1</a>
     <hr>
     <h4>@copyright 2024. all rigths reserved</h4>
 </body>
