--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <br>
     <a href="#">Home</a>
     <a href="#">Contact</a>
+    <a href="#">About</a>
     <a href="https://anjanashreya.github.io/">Project 1</a>
     <hr>
     <h4>@copyright 2024. all rigths reserved</h4>
