--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            background-color: aquamarine;
+        }
+        .row {
+            background-color: pink;
+            display: flex;
+            justify-content: space-between;
+            padding: 15px;
+        }
+        .box {
+            /* background-color: rgb(167, 214, 232); */
+            padding: 2px;
+        }
+        .row1{
+            background-color: aquamarine;
+            display: flex;
+            justify-content: space-around;
+            height: 300px;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Anjana Shreya</h1>
+    <div class="row">
+        <div class="box">Anjana Shreya</div>
+        <div class="box"><a href="#">Home</a> | <a href="#">Projects</a> | <a href="#">About</a> | <a href="#">Contact</a></div>
+    </div>
+    <div class="row1">
+        <div>
+            <h1>Anjana Shreya</h1>
+            <h3>Fullstack Developer</h3>
+        </div>
+        <img src="https://picsum.photos/seed/picsum/200/300" alt="image">
+    </div>
+    <!-- <h1>Anjana Shreya</h1>
     <hr>
     <h3>I am a webdeveloper</h3>
     <img src="https://picsum.photos/seed/picsum/200/300" alt="This is an image">
@@ -16,6 +54,6 @@
     <a href="#">About</a>
     <a href="https://anjanashreya.github.io/">Project 1</a>
     <hr>
-    <h4>@copyright 2024. all rigths reserved</h4>
+    <h4>@copyright 2024. all rigths reserved</h4> -->
 </body>
 </html>
