--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             background-color: aquamarine;
             display: flex;
             justify-content: space-around;
-            height: 300px;
+            padding: 20px;
+            height: 400px;
             align-items: center;
         }
     </style>
@@ -42,7 +43,9 @@
             <h1>Anjana Shreya</h1>
             <h3>Fullstack Developer</h3>
         </div>
-        <img src="https://picsum.photos/seed/picsum/200/300" alt="image">
+        <div>
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="image">
+        </div>
     </div>
     <!-- <h1>Anjana Shreya</h1>
     <hr>
