--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: aquamarine;
         }
         .row {
-            background-color: pink;
+            background-color: rgb(252, 159, 175);
             display: flex;
             justify-content: space-between;
             padding: 15px;
@@ -24,11 +24,19 @@
             padding: 2px;
         }
         .row1{
-            background-color: aquamarine;
+            background-color: skyblue;
             display: flex;
             justify-content: space-around;
             padding: 20px;
             height: 400px;
+            align-items: center;
+        }
+        .row2{
+            background-color: rgb(249, 211, 216);
+            display: flex;
+            justify-content: space-around;
+            padding: 20px;
+            height: 200px;
             align-items: center;
         }
     </style>
@@ -45,6 +53,17 @@
         </div>
         <div>
             <img src="https://picsum.photos/seed/picsum/200/300" alt="image">
+        </div>
+    </div>
+    <div class="row2">
+        <div>
+            <h1>Projects</h1>
+            <ol>
+                <li>Project 1</li>
+                <li>Project 2</li>
+                <li>Project 3</li>
+                <li>Project 4</li>
+            </ol>
         </div>
     </div>
     <!-- <h1>Anjana Shreya</h1>
