--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             display: flex;
             justify-content: space-around;
             padding: 20px;
-            height: 400px;
+            height: 100vh;
             align-items: center;
         }
         .row2{
@@ -36,7 +36,23 @@
             display: flex;
             justify-content: space-around;
             padding: 20px;
-            height: 200px;
+            height: 100vh;
+            align-items: center;
+        }
+        .row3{
+            background-color: rgb(187, 252, 161);
+            display: flex;
+            justify-content: space-around;
+            padding: 20px;
+            height: 100vh;
+            align-items: center;
+        }
+        .row4{
+            background-color: rgb(246, 183, 116);
+            display: flex;
+            justify-content: space-around;
+            padding: 20px;
+            height: 100vh;
             align-items: center;
         }
     </style>
@@ -44,9 +60,9 @@
 <body>
     <div class="row">
         <div class="box">Anjana Shreya</div>
-        <div class="box"><a href="#">Home</a> | <a href="#">Projects</a> | <a href="#">About</a> | <a href="#">Contact</a></div>
+        <div class="box"><a href="#Home">Home</a> | <a href="#Projects">Projects</a> | <a href="#About">About</a> | <a href="#Contact">Contact</a></div>
     </div>
-    <div class="row1">
+    <div class="row1" id="Home">
         <div>
             <h1>Anjana Shreya</h1>
             <h3>Fullstack Developer</h3>
@@ -55,7 +71,7 @@
             <img src="https://picsum.photos/seed/picsum/200/300" alt="image">
         </div>
     </div>
-    <div class="row2">
+    <div class="row2" id="Projects">
         <div>
             <h1>Projects</h1>
             <ol>
@@ -65,6 +81,13 @@
                 <li>Project 4</li>
             </ol>
         </div>
+    </div>
+    <div class="row3" id="About">
+        I am Fullstack Developer
+    </div>
+    <div class="row4" id="Contact">
+        Ph: <br>
+        Email: 
     </div>
     <!-- <h1>Anjana Shreya</h1>
     <hr>
