--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anjana Shreya</title>
     <style>
         *{
             box-sizing: border-box;
@@ -18,6 +18,9 @@
             display: flex;
             justify-content: space-between;
             padding: 15px;
+            position: fixed;
+            top: 0;
+            width: 99vw;
         }
         .box {
             /* background-color: rgb(167, 214, 232); */
