--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             position: fixed;
             top: 0;
             width: 99vw;
+            border: 2px solid black;
+            box-shadow: 2px 2px 20px;
         }
         .box {
             /* background-color: rgb(167, 214, 232); */
